--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
     "version": "1.0",
     "dependencies": {
         "bootstrap": "latest",
-        "angular": "latest",
-        "angular-route": "latest"
+        "angular": ">=1 <1.3.0",
+        "angular-route": ">=1 <1.3.0",
+        "angular-resource": ">=1 <1.3.0",
+        "angular-bootstrap": "latest"
     }
 }
