--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
         "angular": ">=1 <1.3.0",
         "angular-route": ">=1 <1.3.0",
         "angular-resource": ">=1 <1.3.0",
-        "angular-bootstrap": "latest"
+        "angular-bootstrap": "latest",
     }
 }
